@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="src" path="src/test"/>
+	<classpathentry kind="src" path="src/benchmarks"/>
+	<classpathentry kind="src" path="src/core"/>
 	<classpathentry kind="src" path="src/examples"/>
+	<classpathentry kind="src" path="src/hdfs"/>
+	<classpathentry kind="src" path="src/mapred"/>
+	<classpathentry kind="src" path="src/test"/>
+	<classpathentry kind="src" path="src/tools"/>
 	<classpathentry kind="src" path="src/contrib/data_join/src/java"/>
 	<classpathentry kind="src" path="src/contrib/data_join/src/examples"/>
 	<classpathentry kind="src" path="src/contrib/streaming/src/java"/>
@@ -14,6 +18,7 @@
 	<classpathentry kind="lib" path="lib/commons-httpclient-3.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-api-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-net-1.4.1.jar"/>
 	<classpathentry kind="lib" path="lib/jets3t-0.6.0.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-5.1.4.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-ext/commons-el.jar"/>
@@ -21,10 +26,17 @@
 	<classpathentry kind="lib" path="lib/jetty-ext/jasper-runtime.jar"/>
 	<classpathentry kind="lib" path="lib/jetty-ext/jsp-api.jar"/>
 	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/kfs-0.1.jar"/>
+	<classpathentry kind="lib" path="lib/kfs-0.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.13.jar"/>
+	<classpathentry kind="lib" path="lib/oro-2.0.8.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.4.3.jar"/>
 	<classpathentry kind="lib" path="lib/xmlenc-0.52.jar"/>
+	<classpathentry kind="lib" path="src/test/lib/ftplet-api-1.0.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="src/test/lib/ftpserver-core-1.0.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="src/test/lib/ftpserver-server-1.0.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="src/test/lib/mina-core-2.0.0-M2-20080407.124109-12.jar"/>
 	<classpathentry kind="lib" path="build/test/classes"/>
 	<classpathentry kind="output" path="build/eclipse-classes"/>
 </classpath>
